# tokimeki-image-editor

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
src/: app.html
src/lib/: index.ts  types.ts
src/lib/components/: AdjustTool.svelte  AnnotationTool.svelte  BlurTool.svelte  BottomDock.svelte  Canvas.svelte  CropTool.svelte  ExportTool.svelte  FilterTool.svelte  FloatingRail.svelte  IconButton.svelte  ImageEditor.svelte  Popover.svelte  QuickDrawEditor.svelte  RailButton.svelte  RotateTool.svelte  Sheet.svelte  Slider.svelte  StampTool.svelte  ToolPanel.svelte  Toolbar.svelte
src/lib/config/: stamps.ts
src/lib/i18n/: index.ts
src/lib/i18n/locales/: en.json  ja.json
src/lib/shaders/: annotation.ts  blur.ts  blur.wgsl  composite.ts  composite.wgsl  grain.ts  grain.wgsl  image-editor.ts  image-editor.wgsl
src/lib/styles/: tokens.css
src/lib/utils/: adjustments.ts  annotation-cache.ts  annotation-renderer.ts  canvas.ts  colors.ts  coordinates.ts  drawing.ts  editor-core.ts  editor-interaction.ts  filters.ts  haptics.ts  history.ts  lod.ts  spatial-index.ts  tile-cache.ts  viewport.ts  webgpu-annotation.ts  webgpu-render.ts
src/lib/wasm/: stroke-processor.ts  stroke_processor_bg.wasm  stroke_processor_wasm.js
src/routes/: +layout.svelte  +page.svelte
src/routes/embed/: +page.svelte
wasm/stroke-processor/: Cargo.toml
wasm/stroke-processor/src/: lib.rs
